flycheck-stan/examples/example_error_undefined_include_file.stanc3out.txt

Syntax error in 'examples/example_error_undefined_include_file.stan', line 4, column 0, include error:
   -------------------------------------------------
     2:  // https://mc-stan.org/bayesplot/articles/visual-mcmc-diagnostics.html
     3:  functions {
     4:  #include no_such_file.stan
         ^
     5:  }
     6:  data {
   -------------------------------------------------

Could not find include file no_such_file.stan in specified include paths.


